done with theory section, now work on jet measurements

--- a/jetMeasurements.tex
+++ b/jetMeasurements.tex
@@ -3,11 +3,17 @@
 
 This section shall discuss some important jet measurements that motivate the study of the main analysis in this thesis. These measurements include the jet $\mathrm{R}_{AA}$, jet $\mathrm{X}_{J}$, and jet fragmentation. 
 
-\section{Jet $\mathrm{R}_{AA}$}
-\input{jetraa.tex}
+\section{Modification of jet yields: Jet $\mathrm{R}_{AA}$}
+Experimentally, the nuclear modification can be quantified by the nuclear modification factor $R_{AA}$:
+
+\begin{align}
+R_{AA} (\pt, y, \phi_p) = \frac{1}{N_{\mathrm{coll}}}
+\end{align}
+
+
 
 \section{Jet $\mathrm{X}_{J}$}
-\input{jetxj.tex}
-
 \section{Jet Fragmentation}
-\input{jetFF.tex}
+
+
+
