--- a/qgp.tex
+++ b/qgp.tex
@@ -201,7 +201,7 @@ where $\phi$ is the angle in the transverse plane, $\bar{\Psi}_n$ are the event 
 \end{center}
 \end{figure}
 
-The energy density of the QGP can be derived using \cite{PhysRevD.27.140}:
+The Bjorken energy density of the QGP can be derived using \cite{PhysRevD.27.140}:
 
 \begin{align}
 \varepsilon \geq \frac{d\Et/d\eta}{\tau_0 \pi R^2} = \frac{3}{2} \langle \Et/N \rangle \frac{d\Nch/d\eta}{\tau_0 \pi R^2}
