--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,4 +1,229 @@
 % !TEX root = thesis-ex.tex
+@article{Chatrchyan:2012nia,
+      author         = "Chatrchyan, Serguei and others",
+      title          = "{Jet momentum dependence of jet quenching in PbPb
+                        collisions at $\sqrt{s_{NN}}=2.76$ TeV}",
+      collaboration  = "CMS",
+      journal        = "Phys. Lett.",
+      volume         = "B712",
+      year           = "2012",
+      pages          = "176-197",
+      doi            = "10.1016/j.physletb.2012.04.058",
+      eprint         = "1202.5022",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      reportNumber   = "CMS-HIN-11-013, CERN-PH-EP-2012-042",
+      SLACcitation   = "%%CITATION = ARXIV:1202.5022;%%"
+}
+
+@article{Guo:2000nz,
+      author         = "Guo, Xiao-feng and Wang, Xin-Nian",
+      title          = "{Multiple scattering, parton energy loss and modified
+                        fragmentation functions in deeply inelastic e A
+                        scattering}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "85",
+      year           = "2000",
+      pages          = "3591-3594",
+      doi            = "10.1103/PhysRevLett.85.3591",
+      eprint         = "hep-ph/0005044",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "LBNL-45631, LBL-45631",
+      SLACcitation   = "%%CITATION = HEP-PH/0005044;%%"
+}
+
+@article{Arnold:2001ba,
+      author         = "Arnold, Peter Brockway and Moore, Guy D. and Yaffe,
+                        Laurence G.",
+      title          = "{Photon emission from ultrarelativistic plasmas}",
+      journal        = "JHEP",
+      volume         = "11",
+      year           = "2001",
+      pages          = "057",
+      doi            = "10.1088/1126-6708/2001/11/057",
+      eprint         = "hep-ph/0109064",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "UW-PT-01-21",
+      SLACcitation   = "%%CITATION = HEP-PH/0109064;%%"
+}
+
+@article{Wiedemann:2000za,
+      author         = "Wiedemann, Urs Achim",
+      title          = "{Gluon radiation off hard quarks in a nuclear
+                        environment: Opacity expansion}",
+      journal        = "Nucl. Phys.",
+      volume         = "B588",
+      year           = "2000",
+      pages          = "303-344",
+      doi            = "10.1016/S0550-3213(00)00457-0",
+      eprint         = "hep-ph/0005129",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0005129;%%"
+}
+
+@article{Gyulassy:1999zd,
+      author         = "Gyulassy, Miklos and Levai, Peter and Vitev, Ivan",
+      title          = "{Jet quenching in thin quark gluon plasmas. 1.
+                        Formalism}",
+      journal        = "Nucl. Phys.",
+      volume         = "B571",
+      year           = "2000",
+      pages          = "197-233",
+      doi            = "10.1016/S0550-3213(99)00713-0",
+      eprint         = "hep-ph/9907461",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/9907461;%%"
+}
+
+
+@article{BAIER1997291,
+title = "Radiative energy loss of high energy quarks and gluons in a finite-volume quark-gluon plasma",
+journal = "Nuclear Physics B",
+volume = "483",
+number = "1",
+pages = "291 - 320",
+year = "1997",
+issn = "0550-3213",
+doi = "https://doi.org/10.1016/S0550-3213(96)00553-6",
+url = "http://www.sciencedirect.com/science/article/pii/S0550321396005536",
+author = "R. Baier and Yu.L. Dokshitzer and A.H. Mueller and S. Peigné and D. Schiff",
+}
+@article{Saito:1985ct,
+      author         = "Saito, Koichi and Uchiyama, Toshihiro",
+      title          = "{Effect of the Fermi Motion on Nuclear Structure
+                        Functions and the Emc Effect}",
+      journal        = "Z. Phys.",
+      volume         = "A322",
+      year           = "1985",
+      pages          = "299",
+      doi            = "10.1007/BF01411895",
+      reportNumber   = "Print-85-0377 (TOHOKU)",
+      SLACcitation   = "%%CITATION = ZEPYA,A322,299;%%"
+}
+
+@article{PhysRevC.85.047301,
+  title = {New data strengthen the connection between short range correlations and the EMC effect},
+  author = {Hen, O. and Piasetzky, E. and Weinstein, L. B.},
+  journal = {Phys. Rev. C},
+  volume = {85},
+  issue = {4},
+  pages = {047301},
+  numpages = {4},
+  year = {2012},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.85.047301},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.85.047301}
+}
+
+@article{RevModPhys.89.045002,
+  title = {Nucleon-nucleon correlations, short-lived excitations, and the quarks within},
+  author = {Hen, Or and Miller, Gerald A. and Piasetzky, Eli and Weinstein, Lawrence B.},
+  journal = {Rev. Mod. Phys.},
+  volume = {89},
+  issue = {4},
+  pages = {045002},
+  numpages = {49},
+  year = {2017},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/RevModPhys.89.045002},
+  url = {https://link.aps.org/doi/10.1103/RevModPhys.89.045002}
+}
+
+
+@article{AUBERT1983275,
+title = "The ratio of the nucleon structure functions F2N for iron and deuterium",
+journal = "Physics Letters B",
+volume = "123",
+number = "3",
+pages = "275 - 278",
+year = "1983",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/0370-2693(83)90437-9",
+url = "http://www.sciencedirect.com/science/article/pii/0370269383904379",
+author = "{European Muon Collaboration}",
+}
+
+@article{PhysRevLett.64.1342,
+  title = {Shadowing and antishadowing of nuclear structure functions},
+  author = {Brodsky, Stanley J. and Lu, Hung Jung},
+  journal = {Phys. Rev. Lett.},
+  volume = {64},
+  issue = {12},
+  pages = {1342--1345},
+  numpages = {0},
+  year = {1990},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.64.1342},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.64.1342}
+}
+
+
+@article{Eskola_2009,
+	doi = {10.1088/1126-6708/2009/04/065},
+	url = {https://doi.org/10.1088%2F1126-6708%2F2009%2F04%2F065},
+	year = 2009,
+	month = {apr},
+	publisher = {Springer Nature},
+	volume = {2009},
+	number = {04},
+	pages = {065--065},
+	author = {K.J Eskola and H Paukkunen and C.A Salgado},
+	title = {{EPS}09 {\textemdash} A new generation of {NLO} and {LO} nuclear parton distribution functions},
+	journal = {Journal of High Energy Physics},
+}
+
+@article{PhysRevD.69.074028,
+  title = {Nuclear parton distributions at next to leading order},
+  author = {de Florian, D. and Sassot, R.},
+  journal = {Phys. Rev. D},
+  volume = {69},
+  issue = {7},
+  pages = {074028},
+  numpages = {9},
+  year = {2004},
+  month = {Apr},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.69.074028},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.69.074028}
+}
+
+
+@article{PhysRevC.76.065207,
+  title = {Determination of nuclear parton distribution functions and their uncertainties at next-to-leading order},
+  author = {Hirai, M. and Kumano, S. and Nagai, T.-H.},
+  journal = {Phys. Rev. C},
+  volume = {76},
+  issue = {6},
+  pages = {065207},
+  numpages = {16},
+  year = {2007},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.76.065207},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.76.065207}
+}
+
+
+
+@article{201667,
+title = "Charged-particle distributions in s=13 TeV pp interactions measured with the ATLAS detector at the LHC",
+journal = "Physics Letters B",
+volume = "758",
+pages = "67 - 88",
+year = "2016",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/j.physletb.2016.04.050",
+url = "http://www.sciencedirect.com/science/article/pii/S037026931630123X",
+author = "{ATLAS Collaboration}",
+}
+
 @article{Aaboud:2017wsi,
       author         = "{ATLAS Collaboration}",
       title          = "{Measurement of inclusive jet and dijet cross-sections in
