--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -125,9 +125,9 @@ For my Mother, Father, and Brother
 \label{sec:theory}
 \input{theory.tex}
 
-%\chapter{Important Jet Measurements}  %all about Jets ? include jet measurements, jet reco (take it out from main analysis)
-%\label{sec:jetMeasurements}
-%\input{jetMeasurements.tex}
+\chapter{Important Jet Measurements}  %all about Jets ? include jet measurements, jet reco (take it out from main analysis)
+\label{sec:jetMeasurements}
+\input{jetMeasurements.tex}
 
 %\chapter{Experimental Setup}
 %\label{sec:setup}
