--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,4 +1,78 @@
 % !TEX root = thesis-ex.tex
+@article{2013220,
+title = "Measurement of the jet radius and transverse momentum dependence of inclusive jet suppression in lead–lead collisions at sNN=2.76 TeV with the ATLAS detector",
+journal = "Physics Letters B",
+volume = "719",
+number = "4",
+pages = "220 - 241",
+year = "2013",
+issn = "0370-2693",
+doi = "https://doi.org/10.1016/j.physletb.2013.01.024",
+url = "http://www.sciencedirect.com/science/article/pii/S037026931300049X",
+author = "{ATLAS Collaboration}",
+}
+
+@article{Salam:2009jx,
+      author         = "Salam, Gavin P.",
+      title          = "{Towards Jetography}",
+      booktitle      = "{2008 CTEQ-MCnet Summer School on QCD Phenomenology and
+                        Monte Carlo Event Generators (MCnet 08) (CTEQ 08)
+                        Debrecen, Hungary, August 8-16, 2008}",
+      journal        = "Eur. Phys. J.",
+      volume         = "C67",
+      year           = "2010",
+      pages          = "637-686",
+      doi            = "10.1140/epjc/s10052-010-1314-6",
+      eprint         = "0906.1833",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:0906.1833;%%"
+}
+
+@article{Salam_2007,
+	doi = {10.1088/1126-6708/2007/05/086},
+	url = {https://doi.org/10.1088%2F1126-6708%2F2007%2F05%2F086},
+	year = 2007,
+	month = {may},
+	publisher = {Springer Nature},
+	volume = {2007},
+	number = {05},
+	pages = {086--086},
+	author = {Gavin P Salam and Gr{\'{e}}gory Soyez},
+	title = {A practical seedless infrared-safe cone jet algorithm},
+	journal = {Journal of High Energy Physics},
+}
+
+@article{Dokshitzer:1997in,
+      author         = "Dokshitzer, Yuri L. and Leder, G. D. and Moretti, S. and
+                        Webber, B. R.",
+      title          = "{Better jet clustering algorithms}",
+      journal        = "JHEP",
+      volume         = "08",
+      year           = "1997",
+      pages          = "001",
+      doi            = "10.1088/1126-6708/1997/08/001",
+      eprint         = "hep-ph/9707323",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CAVENDISH-HEP-97-06",
+      SLACcitation   = "%%CITATION = HEP-PH/9707323;%%"
+}
+
+@article{Catani:1993hr,
+      author         = "Catani, S. and Dokshitzer, Yuri L. and Seymour, M. H. and
+                        Webber, B. R.",
+      title          = "{Longitudinally invariant $K_t$ clustering algorithms for
+                        hadron hadron collisions}",
+      journal        = "Nucl. Phys.",
+      volume         = "B406",
+      year           = "1993",
+      pages          = "187-224",
+      doi            = "10.1016/0550-3213(93)90166-M",
+      reportNumber   = "CERN-TH-6775-93, LU-TP-93-2",
+      SLACcitation   = "%%CITATION = NUPHA,B406,187;%%"
+}
+
 @article{Chatrchyan:2012nia,
       author         = "Chatrchyan, Serguei and others",
       title          = "{Jet momentum dependence of jet quenching in PbPb
@@ -17,7 +91,7 @@
 }
 
 @article{Guo:2000nz,
-      author         = "Guo, Xiao-feng and Wang, Xin-Nian",
+      author         = "Guo, Xiao-Feng and Wang, Xin-Nian",
       title          = "{Multiple scattering, parton energy loss and modified
                         fragmentation functions in deeply inelastic e A
                         scattering}",
@@ -333,7 +407,7 @@ abstract = "A novel derivation of the Q2 dependence of quark and gluon densities
 }
 
 @article{Adcox:2004mh,
-      author         = "Adcox, K. and others",
+      author         = "{PHENIX Collaboration}",
       title          = "{Formation of dense partonic matter in relativistic
                         nucleus-nucleus collisions at RHIC: Experimental
                         evaluation by the PHENIX collaboration}",
@@ -444,7 +518,7 @@ url="https://doi.org/10.1007/JHEP01(2016)006"
 
 
 @article{ATLAS:2017wvp,
-      author         = "The ATLAS collaboration",
+      author         = "{ATLAS collaboration}",
       title          = "{Study of inclusive jet yields in Pb+Pb collisions at
                         $\sqrt{s_{N N}} = 5.02$ TeV}",
       collaboration  = "ATLAS",
@@ -866,7 +940,7 @@ eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
 
 
 @article{Aaboud:2018ves,
-      author         = "Aaboud, Morad and others",
+      author         = "{ATLAS Collaboration}",
       title          = "{Measurement of the azimuthal anisotropy of charged
                         particles produced in $\sqrt{s_{_\text {NN}}}$ = 5.02 TeV
                         Pb+Pb collisions with the ATLAS detector}",
