--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -125,7 +125,7 @@ For my Mother, Father, and Brother
 \label{sec:theory}
 \input{theory.tex}
 
-\chapter{Important Jet Measurements}  %all about Jets ? include jet measurements, jet reco (take it out from main analysis)
+\chapter{Major Jet Measurements}
 \label{sec:jetMeasurements}
 \input{jetMeasurements.tex}
 
