reorganized chapters: moved jet reco to theory section, made qgp and hicollisions separate sections

--- a/theory.tex
+++ b/theory.tex
@@ -5,8 +5,12 @@ This section shall discuss the theoretical background necessary to understand je
 \label{sec:qcd}
 \input{qcd.tex}
 
-\section{Heavy Ion Collisions and the Quark Gluon Plasma}
+\section{Heavy Ion Collisions}
 \label{sec:HICollisions}
+\input{hicollisions.tex}
+
+\section{Quark Gluon Plasma}
+\label{sec:qgp}
 \input{qgp.tex}
 
 \section{Jets and Jet Quenching}
