--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,16 +1,24 @@
 % !TEX root = thesis-ex.tex
 @article{2013220,
-title = "Measurement of the jet radius and transverse momentum dependence of inclusive jet suppression in lead–lead collisions at sNN=2.76 TeV with the ATLAS detector",
-journal = "Physics Letters B",
-volume = "719",
-number = "4",
-pages = "220 - 241",
-year = "2013",
-issn = "0370-2693",
-doi = "https://doi.org/10.1016/j.physletb.2013.01.024",
-url = "http://www.sciencedirect.com/science/article/pii/S037026931300049X",
-author = "{ATLAS Collaboration}",
+      title          = "{Measurement of the jet radius and transverse momentum
+                        dependence of inclusive jet suppression in lead-lead
+                        collisions at $\sqrt{s_{NN}}$= 2.76 TeV with the ATLAS
+                        detector}",
+	nodoi = "https://doi.org/10.1016/j.physletb.2013.01.024",
+	nourl = "http://www.sciencedirect.com/science/article/pii/S037026931300049X",
+	author = "{ATLAS Collaboration}",
+      collaboration  = "ATLAS",
+      journal        = "Phys. Lett.",
+      volume         = "B719",
+      year           = "2013",
+      pages          = "220-241",
+      eprint         = "1208.1967",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2012-134",
+      SLACcitation   = "%%CITATION = ARXIV:1208.1967;%%"
 }
+
 
 @article{Salam:2009jx,
       author         = "Salam, Gavin P.",
@@ -22,7 +30,7 @@ author = "{ATLAS Collaboration}",
       volume         = "C67",
       year           = "2010",
       pages          = "637-686",
-      doi            = "10.1140/epjc/s10052-010-1314-6",
+      nodoi            = "10.1140/epjc/s10052-010-1314-6",
       eprint         = "0906.1833",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -30,8 +38,8 @@ author = "{ATLAS Collaboration}",
 }
 
 @article{Salam_2007,
-	doi = {10.1088/1126-6708/2007/05/086},
-	url = {https://doi.org/10.1088%2F1126-6708%2F2007%2F05%2F086},
+	nodoi = {10.1088/1126-6708/2007/05/086},
+	nourl = {https://doi.org/10.1088%2F1126-6708%2F2007%2F05%2F086},
 	year = 2007,
 	month = {may},
 	publisher = {Springer Nature},
@@ -51,7 +59,7 @@ author = "{ATLAS Collaboration}",
       volume         = "08",
       year           = "1997",
       pages          = "001",
-      doi            = "10.1088/1126-6708/1997/08/001",
+      nodoi            = "10.1088/1126-6708/1997/08/001",
       eprint         = "hep-ph/9707323",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -68,7 +76,7 @@ author = "{ATLAS Collaboration}",
       volume         = "B406",
       year           = "1993",
       pages          = "187-224",
-      doi            = "10.1016/0550-3213(93)90166-M",
+      nodoi            = "10.1016/0550-3213(93)90166-M",
       reportNumber   = "CERN-TH-6775-93, LU-TP-93-2",
       SLACcitation   = "%%CITATION = NUPHA,B406,187;%%"
 }
@@ -82,7 +90,7 @@ author = "{ATLAS Collaboration}",
       volume         = "B712",
       year           = "2012",
       pages          = "176-197",
-      doi            = "10.1016/j.physletb.2012.04.058",
+      nodoi            = "10.1016/j.physletb.2012.04.058",
       eprint         = "1202.5022",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -99,7 +107,7 @@ author = "{ATLAS Collaboration}",
       volume         = "85",
       year           = "2000",
       pages          = "3591-3594",
-      doi            = "10.1103/PhysRevLett.85.3591",
+      nodoi            = "10.1103/PhysRevLett.85.3591",
       eprint         = "hep-ph/0005044",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -115,7 +123,7 @@ author = "{ATLAS Collaboration}",
       volume         = "11",
       year           = "2001",
       pages          = "057",
-      doi            = "10.1088/1126-6708/2001/11/057",
+      nodoi            = "10.1088/1126-6708/2001/11/057",
       eprint         = "hep-ph/0109064",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -131,7 +139,7 @@ author = "{ATLAS Collaboration}",
       volume         = "B588",
       year           = "2000",
       pages          = "303-344",
-      doi            = "10.1016/S0550-3213(00)00457-0",
+      nodoi            = "10.1016/S0550-3213(00)00457-0",
       eprint         = "hep-ph/0005129",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -146,7 +154,7 @@ author = "{ATLAS Collaboration}",
       volume         = "B571",
       year           = "2000",
       pages          = "197-233",
-      doi            = "10.1016/S0550-3213(99)00713-0",
+      nodoi            = "10.1016/S0550-3213(99)00713-0",
       eprint         = "hep-ph/9907461",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -162,8 +170,8 @@ number = "1",
 pages = "291 - 320",
 year = "1997",
 issn = "0550-3213",
-doi = "https://doi.org/10.1016/S0550-3213(96)00553-6",
-url = "http://www.sciencedirect.com/science/article/pii/S0550321396005536",
+nodoi = "https://doi.org/10.1016/S0550-3213(96)00553-6",
+nourl = "http://www.sciencedirect.com/science/article/pii/S0550321396005536",
 author = "R. Baier and Yu.L. Dokshitzer and A.H. Mueller and S. Peigné and D. Schiff",
 }
 @article{Saito:1985ct,
@@ -174,7 +182,7 @@ author = "R. Baier and Yu.L. Dokshitzer and A.H. Mueller and S. Peigné and D. S
       volume         = "A322",
       year           = "1985",
       pages          = "299",
-      doi            = "10.1007/BF01411895",
+      nodoi            = "10.1007/BF01411895",
       reportNumber   = "Print-85-0377 (TOHOKU)",
       SLACcitation   = "%%CITATION = ZEPYA,A322,299;%%"
 }
@@ -190,8 +198,8 @@ author = "R. Baier and Yu.L. Dokshitzer and A.H. Mueller and S. Peigné and D. S
   year = {2012},
   month = {Apr},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.85.047301},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.85.047301}
+  nodoi = {10.1103/PhysRevC.85.047301},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevC.85.047301}
 }
 
 @article{RevModPhys.89.045002,
@@ -205,8 +213,8 @@ author = "R. Baier and Yu.L. Dokshitzer and A.H. Mueller and S. Peigné and D. S
   year = {2017},
   month = {Nov},
   publisher = {American Physical Society},
-  doi = {10.1103/RevModPhys.89.045002},
-  url = {https://link.aps.org/doi/10.1103/RevModPhys.89.045002}
+  nodoi = {10.1103/RevModPhys.89.045002},
+  nourl = {https://link.aps.org/doi/10.1103/RevModPhys.89.045002}
 }
 
 
@@ -218,8 +226,8 @@ number = "3",
 pages = "275 - 278",
 year = "1983",
 issn = "0370-2693",
-doi = "https://doi.org/10.1016/0370-2693(83)90437-9",
-url = "http://www.sciencedirect.com/science/article/pii/0370269383904379",
+nodoi = "https://doi.org/10.1016/0370-2693(83)90437-9",
+nourl = "http://www.sciencedirect.com/science/article/pii/0370269383904379",
 author = "{European Muon Collaboration}",
 }
 
@@ -234,14 +242,14 @@ author = "{European Muon Collaboration}",
   year = {1990},
   month = {Mar},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.64.1342},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.64.1342}
+  nodoi = {10.1103/PhysRevLett.64.1342},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevLett.64.1342}
 }
 
 
 @article{Eskola_2009,
-	doi = {10.1088/1126-6708/2009/04/065},
-	url = {https://doi.org/10.1088%2F1126-6708%2F2009%2F04%2F065},
+	nodoi = {10.1088/1126-6708/2009/04/065},
+	nourl = {https://doi.org/10.1088%2F1126-6708%2F2009%2F04%2F065},
 	year = 2009,
 	month = {apr},
 	publisher = {Springer Nature},
@@ -264,8 +272,8 @@ author = "{European Muon Collaboration}",
   year = {2004},
   month = {Apr},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevD.69.074028},
-  url = {https://link.aps.org/doi/10.1103/PhysRevD.69.074028}
+  nodoi = {10.1103/PhysRevD.69.074028},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevD.69.074028}
 }
 
 
@@ -280,8 +288,8 @@ author = "{European Muon Collaboration}",
   year = {2007},
   month = {Dec},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.76.065207},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.76.065207}
+  nodoi = {10.1103/PhysRevC.76.065207},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevC.76.065207}
 }
 
 
@@ -293,8 +301,8 @@ volume = "758",
 pages = "67 - 88",
 year = "2016",
 issn = "0370-2693",
-doi = "https://doi.org/10.1016/j.physletb.2016.04.050",
-url = "http://www.sciencedirect.com/science/article/pii/S037026931630123X",
+nodoi = "https://doi.org/10.1016/j.physletb.2016.04.050",
+nourl = "http://www.sciencedirect.com/science/article/pii/S037026931630123X",
 author = "{ATLAS Collaboration}",
 }
 
@@ -308,7 +316,7 @@ author = "{ATLAS Collaboration}",
       volume         = "05",
       year           = "2018",
       pages          = "195",
-      doi            = "10.1007/JHEP05(2018)195",
+      nodoi            = "10.1007/JHEP05(2018)195",
       eprint         = "1711.02692",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -367,8 +375,8 @@ number = "2",
 pages = "298 - 318",
 year = "1977",
 issn = "0550-3213",
-doi = "https://doi.org/10.1016/0550-3213(77)90384-4",
-url = "http://www.sciencedirect.com/science/article/pii/0550321377903844",
+nodoi = "https://doi.org/10.1016/0550-3213(77)90384-4",
+nourl = "http://www.sciencedirect.com/science/article/pii/0550321377903844",
 author = "G. Altarelli and G. Parisi",
 abstract = "A novel derivation of the Q2 dependence of quark and gluon densities (of given helicity) as predicted by quantum chromodynamics is presented. The main body of predictions of the theory for deep-inleastic scattering on either unpolarized or polarized targets is re-obtained by a method which only makes use of the simplest tree diagrams and is entirely phrased in parton language with no reference to the conventional operator formalism."
 }
@@ -385,8 +393,8 @@ abstract = "A novel derivation of the Q2 dependence of quark and gluon densities
   year = {1977},
   month = {Dec},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.39.1436},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.39.1436}
+  nodoi = {10.1103/PhysRevLett.39.1436},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevLett.39.1436}
 }
 
 
@@ -398,7 +406,7 @@ abstract = "A novel derivation of the Q2 dependence of quark and gluon densities
       volume         = "62",
       year           = "2012",
       pages          = "361-386",
-      doi            = "10.1146/annurev-nucl-102711-094910",
+      nodoi            = "10.1146/annurev-nucl-102711-094910",
       eprint         = "1202.3233",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -416,7 +424,7 @@ abstract = "A novel derivation of the Q2 dependence of quark and gluon densities
       volume         = "A757",
       year           = "2005",
       pages          = "184-283",
-      doi            = "10.1016/j.nuclphysa.2005.03.086",
+      nodoi            = "10.1016/j.nuclphysa.2005.03.086",
       eprint         = "nucl-ex/0410003",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -424,8 +432,8 @@ abstract = "A novel derivation of the Q2 dependence of quark and gluon densities
 }
 
 @article{Krajcz_r_2011,
-	doi = {10.1088/0954-3899/38/12/124041},
-	url = {https://doi.org/10.1088%2F0954-3899%2F38%2F12%2F124041},
+	nodoi = {10.1088/0954-3899/38/12/124041},
+	nourl = {https://doi.org/10.1088%2F0954-3899%2F38%2F12%2F124041},
 	year = 2011,
 	month = {nov},
 	publisher = {{IOP} Publishing},
@@ -448,8 +456,8 @@ abstract = "A novel derivation of the Q2 dependence of quark and gluon densities
   year = {1983},
   month = {Jan},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevD.27.140},
-  url = {https://link.aps.org/doi/10.1103/PhysRevD.27.140}
+  nodoi = {10.1103/PhysRevD.27.140},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevD.27.140}
 }
 
 
@@ -461,7 +469,7 @@ abstract = "A novel derivation of the Q2 dependence of quark and gluon densities
       volume         = "63",
       year           = "2013",
       pages          = "123-151",
-      doi            = "10.1146/annurev-nucl-102212-170540",
+      nodoi            = "10.1146/annurev-nucl-102212-170540",
       eprint         = "1301.2826",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-th",
@@ -477,7 +485,7 @@ abstract = "A novel derivation of the Q2 dependence of quark and gluon densities
       volume         = "B789",
       year           = "2019",
       pages          = "643-665",
-      doi            = "10.1016/j.physletb.2018.11.063",
+      nodoi            = "10.1016/j.physletb.2018.11.063",
       eprint         = "1711.05594",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -493,7 +501,7 @@ abstract = "A novel derivation of the Q2 dependence of quark and gluon densities
       volume         = "C58",
       year           = "1998",
       pages          = "1671-1678",
-      doi            = "10.1103/PhysRevC.58.1671",
+      nodoi            = "10.1103/PhysRevC.58.1671",
       eprint         = "nucl-ex/9805001",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -535,8 +543,8 @@ number = "3",
 pages = "176 - 197",
 year = "2012",
 issn = "0370-2693",
-doi = "https://doi.org/10.1016/j.physletb.2012.04.058",
-url = "http://www.sciencedirect.com/science/article/pii/S037026931200487X",
+nodoi = "https://doi.org/10.1016/j.physletb.2012.04.058",
+nourl = "http://www.sciencedirect.com/science/article/pii/S037026931200487X",
 author = "{CMS Collaboration}",
 keywords = "CMS, Physics, Heavy ion, Jet",
 }
@@ -549,7 +557,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       volume         = "178",
       year           = "2008",
       pages          = "852-867",
-      doi            = "10.1016/j.cpc.2008.01.036",
+      nodoi            = "10.1016/j.cpc.2008.01.036",
       eprint         = "0710.3820",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -568,7 +576,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       volume         = "11",
       year           = "2013",
       pages          = "183",
-      doi            = "10.1007/JHEP11(2013)183",
+      nodoi            = "10.1007/JHEP11(2013)183",
       eprint         = "1305.2942",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -585,7 +593,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       volume         = "107",
       year           = "2011",
       pages          = "032301",
-      doi            = "10.1103/PhysRevLett.107.032301",
+      nodoi            = "10.1103/PhysRevLett.107.032301",
       eprint         = "1105.3865",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -604,7 +612,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       year           = "2016",
       number         = "2",
       pages          = "024907",
-      doi            = "10.1103/PhysRevC.93.024907",
+      nodoi            = "10.1103/PhysRevC.93.024907",
       eprint         = "1505.02677",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -619,7 +627,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       volume         = "86",
       year           = "2001",
       pages          = "402-407",
-      doi            = "10.1103/PhysRevLett.86.402",
+      nodoi            = "10.1103/PhysRevLett.86.402",
       eprint         = "nucl-ex/0009011",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -635,7 +643,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       volume         = "1",
       year           = "2016",
       pages          = "154-171",
-      doi            = "10.1016/j.revip.2016.11.002",
+      nodoi            = "10.1016/j.revip.2016.11.002",
       eprint         = "1702.07233",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -653,7 +661,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       year           = "2014",
       number         = "4",
       pages          = "044906",
-      doi            = "10.1103/PhysRevC.89.044906",
+      nodoi            = "10.1103/PhysRevC.89.044906",
       eprint         = "1310.8651",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -671,7 +679,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       volume         = "92",
       year           = "2004",
       pages          = "052302",
-      doi            = "10.1103/PhysRevLett.92.052302",
+      nodoi            = "10.1103/PhysRevLett.92.052302",
       eprint         = "nucl-ex/0306007",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -687,7 +695,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       volume         = "C80",
       year           = "2009",
       pages          = "014904",
-      doi            = "10.1103/PhysRevC.80.014904",
+      nodoi            = "10.1103/PhysRevC.80.014904",
       eprint         = "0904.2315",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -705,14 +713,14 @@ keywords = "CMS, Physics, Heavy ion, Jet",
   year = {1975},
   month = {May},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.34.1353},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.34.1353}
+  nodoi = {10.1103/PhysRevLett.34.1353},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevLett.34.1353}
 }
 
 
 @article{Linde_1979,
-	doi = {10.1088/0034-4885/42/3/001},
-	url = {https://doi.org/10.1088%2F0034-4885%2F42%2F3%2F001},
+	nodoi = {10.1088/0034-4885/42/3/001},
+	nourl = {https://doi.org/10.1088%2F0034-4885%2F42%2F3%2F001},
 	year = 1979,
 	month = {mar},
 	publisher = {{IOP} Publishing},
@@ -730,7 +738,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       title          = "{Gravitational collisions and the quark-gluon plasma}",
       school         = "Utrecht U.",
       year           = "2014",
-      url            = "http://dspace.library.uu.nl/handle/1874/294809",
+      nourl            = "http://dspace.library.uu.nl/handle/1874/294809",
       eprint         = "1407.1849",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-th",
@@ -747,7 +755,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       month         = "Sep",
       year          = "2016",
       reportNumber  = "ATL-COM-PHYS-2016-1287",
-      url           = "https://cds.cern.ch/record/2212936",
+      nourl           = "https://cds.cern.ch/record/2212936",
 }
 
 @article{Bialas:1976ed,
@@ -758,7 +766,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       volume         = "B111",
       year           = "1976",
       pages          = "461-476",
-      doi            = "10.1016/0550-3213(76)90329-1",
+      nodoi            = "10.1016/0550-3213(76)90329-1",
       reportNumber   = "TPJU-9/76",
       SLACcitation   = "%%CITATION = NUPHA,B111,461;%%"
 }
@@ -771,7 +779,7 @@ keywords = "CMS, Physics, Heavy ion, Jet",
       volume         = "B507",
       year           = "2001",
       pages          = "121-128",
-      doi            = "10.1016/S0370-2693(01)00457-9",
+      nodoi            = "10.1016/S0370-2693(01)00457-9",
       eprint         = "nucl-th/0012025",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-th",
@@ -786,8 +794,8 @@ number = "3",
 pages = "495 - 536",
 year = "1987",
 issn = "0092-640X",
-doi = "https://doi.org/10.1016/0092-640X(87)90013-1",
-url = "http://www.sciencedirect.com/science/article/pii/0092640X87900131",
+nodoi = "https://doi.org/10.1016/0092-640X(87)90013-1",
+nourl = "http://www.sciencedirect.com/science/article/pii/0092640X87900131",
 author = "H. De Vries and C.W. De Jager and C. De Vries",
 }
 
@@ -826,8 +834,8 @@ volume = {57},
 number = {1},
 pages = {205-243},
 year = {2007},
-doi = {10.1146/annurev.nucl.57.090506.123020},
-URL = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
+nodoi = {10.1146/annurev.nucl.57.090506.123020},
+nourl = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
 eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
 }
 
@@ -846,8 +854,8 @@ eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
   year = {2016},
   month = {Apr},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.116.132302},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.116.132302}
+  nodoi = {10.1103/PhysRevLett.116.132302},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevLett.116.132302}
 }
 
 
@@ -864,8 +872,8 @@ eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
   year = {2014},
   month = {Apr},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.89.044906},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.89.044906}
+  nodoi = {10.1103/PhysRevC.89.044906},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevC.89.044906}
 }
 
 
@@ -880,8 +888,8 @@ eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
   year = {2007},
   month = {Jun},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.98.242302},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.98.242302}
+  nodoi = {10.1103/PhysRevLett.98.242302},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevLett.98.242302}
 }
 
 
@@ -897,8 +905,8 @@ eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
   year = {2003},
   month = {Oct},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.91.182301},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.91.182301}
+  nodoi = {10.1103/PhysRevLett.91.182301},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevLett.91.182301}
 }
 
 
@@ -915,8 +923,8 @@ eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
   year = {2001},
   month = {Oct},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.87.182301},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.87.182301}
+  nodoi = {10.1103/PhysRevLett.87.182301},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevLett.87.182301}
 }
 
 
@@ -934,8 +942,8 @@ eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
   year = {2014},
   month = {Aug},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.90.024908},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.90.024908}
+  nodoi = {10.1103/PhysRevC.90.024908},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevC.90.024908}
 }
 
 
@@ -950,7 +958,7 @@ eprint = {https://doi.org/10.1146/annurev.nucl.57.090506.123020},
       year           = "2018",
       number         = "12",
       pages          = "997",
-      doi            = "10.1140/epjc/s10052-018-6468-7",
+      nodoi            = "10.1140/epjc/s10052-018-6468-7",
       eprint         = "1808.03951",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -987,8 +995,8 @@ url="https://doi.org/10.1140/epjc/s10052-014-3157-z"
   year = {2013},
   month = {Oct},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.88.044910},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.88.044910}
+  nodoi = {10.1103/PhysRevC.88.044910},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevC.88.044910}
 }
 
 
@@ -1004,8 +1012,8 @@ url="https://doi.org/10.1140/epjc/s10052-014-3157-z"
   year = {2007},
   month = {Feb},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.75.024910},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.75.024910}
+  nodoi = {10.1103/PhysRevC.75.024910},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevC.75.024910}
 }
 
 
@@ -1021,8 +1029,8 @@ url="https://doi.org/10.1140/epjc/s10052-014-3157-z"
   year = {2005},
   month = {Jul},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.72.014908},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.72.014908}
+  nodoi = {10.1103/PhysRevC.72.014908},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevC.72.014908}
 }
 
 
@@ -1039,8 +1047,8 @@ url="https://doi.org/10.1140/epjc/s10052-014-3157-z"
   year = {2004},
   month = {Feb},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.69.024904},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.69.024904}
+  nodoi = {10.1103/PhysRevC.69.024904},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevC.69.024904}
 }
 
 
@@ -1057,8 +1065,8 @@ url="https://doi.org/10.1140/epjc/s10052-014-3157-z"
   year = {2016},
   month = {Feb},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.93.024917},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.93.024917}
+  nodoi = {10.1103/PhysRevC.93.024917},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevC.93.024917}
 }
 
 
@@ -1072,14 +1080,14 @@ pages = "102 - 183",
 year = "2005",
 note = "First Three Years of Operation of RHIC",
 issn = "0375-9474",
-doi = "https://doi.org/10.1016/j.nuclphysa.2005.03.085",
-url = "http://www.sciencedirect.com/science/article/pii/S0375947405005294",
+nodoi = "https://doi.org/10.1016/j.nuclphysa.2005.03.085",
+nourl = "http://www.sciencedirect.com/science/article/pii/S0375947405005294",
 author = "{STAR Collaboration}"
 }
 
 @article{Fodor_2004,
-	doi = {10.1088/1126-6708/2004/04/050},
-	url = {https://doi.org/10.1088%2F1126-6708%2F2004%2F04%2F050},
+	nodoi = {10.1088/1126-6708/2004/04/050},
+	nourl = {https://doi.org/10.1088%2F1126-6708%2F2004%2F04%2F050},
 	year = 2004,
 	month = {apr},
 	publisher = {Springer Nature},
@@ -1098,8 +1106,8 @@ volume = "754",
 pages = "235 - 248",
 year = "2016",
 issn = "0370-2693",
-doi = "https://doi.org/10.1016/j.physletb.2016.01.020",
-url = "http://www.sciencedirect.com/science/article/pii/S0370269316000320",
+nodoi = "https://doi.org/10.1016/j.physletb.2016.01.020",
+nourl = "http://www.sciencedirect.com/science/article/pii/S0370269316000320",
 author = "{ALICE Collaboration}"
 }
 
@@ -1115,8 +1123,8 @@ author = "{ALICE Collaboration}"
   year = {2010},
   month = {Mar},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.104.132301},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.104.132301}
+  nodoi = {10.1103/PhysRevLett.104.132301},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevLett.104.132301}
 }
 
   
@@ -1132,8 +1140,8 @@ author = "{ALICE Collaboration}"
   year = {2018},
   month = {Jun},
   publisher = {American Physical Society},
-  doi = {10.1103/RevModPhys.90.025005},
-  url = {https://link.aps.org/doi/10.1103/RevModPhys.90.025005}
+  nodoi = {10.1103/RevModPhys.90.025005},
+  nourl = {https://link.aps.org/doi/10.1103/RevModPhys.90.025005}
 }
 
 @Inbook{Muller1993,
@@ -1174,8 +1182,8 @@ url="https://doi.org/10.1007/978-1-4615-2940-8_2"
   year = {2005},
   month = {Aug},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevD.72.034004},
-  url = {https://link.aps.org/doi/10.1103/PhysRevD.72.034004}
+  nodoi = {10.1103/PhysRevD.72.034004},
+  nourl = {https://link.aps.org/doi/10.1103/PhysRevD.72.034004}
 }
 
 
@@ -1187,8 +1195,8 @@ number = "2",
 pages = "71 - 158",
 year = "1980",
 issn = "0370-1573",
-doi = "https://doi.org/10.1016/0370-1573(80)90105-2",
-url = "http://www.sciencedirect.com/science/article/pii/0370157380901052",
+nodoi = "https://doi.org/10.1016/0370-1573(80)90105-2",
+nourl = "http://www.sciencedirect.com/science/article/pii/0370157380901052",
 author = "Edward V. Shuryak",
 abstract = "At high enough density and/or temperature ordinary matter undergoes a transition into a plasma-like phase, consisting of quarks and gluons rather than of separate hadrons. Due to asymptotic freedom, the asymptotic properties of such matter can be calculated perturbatively, while in the discussion of phase transitions one should concentrate on nonperturbative effects. Recent progress in this theory is reviewed, as well as its applications to such topics as hadronic structure, neutron stars, high energy collisions of hadrons, etc."
 }
@@ -1201,7 +1209,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "71",
       year           = "1999",
       pages          = "S96-S111",
-      doi            = "10.1103/RevModPhys.71.S96",
+      nodoi            = "10.1103/RevModPhys.71.S96",
       eprint         = "hep-ph/9812285",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -1218,7 +1226,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "B691",
       year           = "2010",
       pages          = "127-137",
-      doi            = "10.1016/j.physletb.2010.06.015",
+      nodoi            = "10.1016/j.physletb.2010.06.015",
       eprint         = "1003.2923",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -1234,7 +1242,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "C70",
       year           = "2010",
       pages          = "965-982",
-      doi            = "10.1140/epjc/s10052-010-1504-2",
+      nodoi            = "10.1140/epjc/s10052-010-1504-2",
       eprint         = "1010.6167",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -1250,7 +1258,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "D78",
       year           = "2008",
       pages          = "032004",
-      doi            = "10.1103/PhysRevD.78.032004",
+      nodoi            = "10.1103/PhysRevD.78.032004",
       eprint         = "0802.3955",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -1266,7 +1274,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "C52",
       year           = "2007",
       pages          = "515-530",
-      doi            = "10.1140/epjc/s10052-007-0418-0",
+      nodoi            = "10.1140/epjc/s10052-007-0418-0",
       eprint         = "0707.3093",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -1281,7 +1289,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "C54",
       year           = "2008",
       pages          = "389-409",
-      doi            = "10.1140/epjc/s10052-008-0544-3",
+      nodoi            = "10.1140/epjc/s10052-008-0544-3",
       eprint         = "0711.2606",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -1298,7 +1306,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "C65",
       year           = "2010",
       pages          = "363-383",
-      doi            = "10.1140/epjc/s10052-009-1208-7",
+      nodoi            = "10.1140/epjc/s10052-009-1208-7",
       eprint         = "0904.3870",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -1314,7 +1322,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "D86",
       year           = "2012",
       pages          = "054009",
-      doi            = "10.1103/PhysRevD.86.054009",
+      nodoi            = "10.1103/PhysRevD.86.054009",
       eprint         = "1202.2281",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -1330,7 +1338,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "B774",
       year           = "2007",
       pages          = "182-207",
-      doi            = "10.1016/j.nuclphysb.2007.03.035",
+      nodoi            = "10.1016/j.nuclphysb.2007.03.035",
       eprint         = "hep-ph/0607200",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -1349,7 +1357,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "DIS2013",
       year           = "2013",
       pages          = "039",
-      doi            = "10.22323/1.191.0039",
+      nodoi            = "10.22323/1.191.0039",
       eprint         = "1308.5166",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -1365,7 +1373,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "34",
       year           = "2003",
       pages          = "20-46",
-      doi            = "10.1134/S1063779607060068",
+      nodoi            = "10.1134/S1063779607060068",
       note           = "[Erratum: Phys. Part. Nucl.38,no.6,827(2007)]",
       eprint         = "hep-ph/0106221",
       archivePrefix  = "arXiv",
@@ -1385,7 +1393,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
   year = {1991},
   month = {7},
   publisher = {American Physical Society},
-  doi = {10.1103/RevModPhys.63.597},
+  nodoi = {10.1103/RevModPhys.63.597},
   nourl = {https://link.aps.org/doi/10.1103/RevModPhys.63.597}
 }
 
@@ -1398,7 +1406,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "B496",
       year           = "1997",
       pages          = "337-357",
-      doi            = "10.1016/S0550-3213(97)00201-0",
+      nodoi            = "10.1016/S0550-3213(97)00201-0",
       eprint         = "hep-ph/9701289",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -1415,7 +1423,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       volume         = "81",
       year           = "1998",
       pages          = "3595-3598",
-      doi            = "10.1103/PhysRevLett.81.3595",
+      nodoi            = "10.1103/PhysRevLett.81.3595",
       eprint         = "hep-ex/9808015",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -1433,7 +1441,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       year           = "2014",
       number         = "1",
       pages          = "012009",
-      doi            = "10.1103/PhysRevD.90.012009",
+      nodoi            = "10.1103/PhysRevD.90.012009",
       eprint         = "1405.7854",
       archivePrefix  = "arXiv",
       primaryClass   = "nucl-ex",
@@ -1452,7 +1460,7 @@ abstract = "At high enough density and/or temperature ordinary matter undergoes 
       pages         = "010001",
       year          = "2012",
       nourl           = "http://cds.cern.ch/record/1481544",
-      doi           = "10.1103/PhysRevD.86.010001",
+      nodoi           = "10.1103/PhysRevD.86.010001",
 }
 
 
@@ -2117,7 +2125,7 @@ nourl="https://doi.org/10.1007/s100520000474"
       journal        = "JINST",
       volume         = "3",
       pages          = "S08003",
-      nonodoi            = "10.1088/1748-0221/3/08/S08003",
+      nodoi            = "10.1088/1748-0221/3/08/S08003",
       year           = "2008",
       SLACcitation   = "%%CITATION = JINST,3,S08003;%%",
 }
@@ -2428,7 +2436,7 @@ SLACcitation   = "%%CITATION = ATLAS-CONF-2015-016;%%"
       year           = "2015",
       number         = "22",
       pages          = "222002",
-      nonodoi            = "10.1103/PhysRevLett.114.222002",
+      nodoi            = "10.1103/PhysRevLett.114.222002",
       eprint         = "1407.0326 [hep-ph]",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -2442,8 +2450,8 @@ SLACcitation   = "%%CITATION = ATLAS-CONF-2015-016;%%"
       year           = "2015",
       number         = "11",
       pages          = "1530014",
-      nonodoi            = "10.1142/S0218301315300143",
-      nonote           = "[,309(2016)]",
+      nodoi            = "10.1142/S0218301315300143",
+      note           = "[,309(2016)]",
       eprint         = "1511.00790 [hep-ph]",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
