added xj section, TODO: JES/JER plots in reconstruction section

--- a/hicollisions.tex
+++ b/hicollisions.tex
@@ -27,6 +27,8 @@ After the collision the energy density between the receding nuclei starts to dec
 
 While Figure~\ref{fig:qgp_form} shows snapshots of a head on (central) collision between two large nuclei, it is possible to have collisions where the impact parameter is larger and hence the overlap region is smaller. These collisions, called peripheral collisions, qualitatively undergo the same process described above, with the size and shape of the QGP being different.
 
+% In fact, peripheral collisions are very similar to proton-proton collisions, with differences coming mainly from nuclear PDFs.
+
 The basic parameters of a heavy ion collision such as the number of participants \Npart\ and number of binary collisions \Ncoll\ can be determined using the Glauber Monte Carlo simulations \cite{glauberArticle, glauberMisc}. This technique considers a nucleus-nucleus collision as a collection of independent binary nucleon-nucleon collisions; the colliding nuclei are modeled as a set of uncorrelated nucleons being positioned within the nucleus based on a the nuclear density function uniform in azimuthal and in polar angles. The nuclear density function shown in Figure~\ref{fig:nuclearDensity} for Au and Cu, is given by:
 
 \begin{align}
