--- a/macros.tex
+++ b/macros.tex
@@ -221,7 +221,7 @@
 \newcommand{\ETreco}{\mbox{$E_{\mathrm{T}}^{\mathrm{reco}}$}}
 \newcommand{\RSix}{\mbox{$R= 0.6$}}
 \newcommand{\EffJet}{\mbox{$\varepsilon_{\mathrm{jet}}$}}
-\newcommand{\Aj}{\mbox{$A_{\mathrm{J}}$}}
+\newcommand{\Aj}{\mbox{$A_J$}}
 \newcommand{\dphi}{$\Delta \phi$}
 \newcommand{\p}{\partial}
 \newcommand{\rvar}{\mbox{$r$}}
