--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -121,31 +121,36 @@ For my Mother, Father, and Brother
 %\input{thesisintro.tex}
 %
 
-\chapter{Theoretical Introduction}
-\label{sec:theory}
-\input{theory.tex}
+%\chapter{Theoretical Introduction}
+%\label{sec:theory}
+%\input{theory.tex}
+%\clearpage
 
 \chapter{Major Jet Measurements}
 \label{sec:jetMeasurements}
 \input{jetMeasurements.tex}
+\clearpage
 
 %\chapter{Experimental Setup}
 %\label{sec:setup}
 %\input{setup.tex}
+%\clearpage
 
 %\chapter{ATLAS Qualification Task}
 %\label{sec:qualification}
 %\input{qualification.tex}
-%
+%\clearpage
+
 %\chapter{Measurement of Angular Correlations Between Tracks And Jets}
 %\label{sec:mainanalysis}
 %\input{mainAnalysis.tex}
-%
+%\clearpage
+
 %\appendix
 %\chapter{HI JER Uncertainty}
 %\label{sec:appendix_hijerDerivation}
 %\input{appendixHIJERDerivation.tex}
-\clearpage
+%\clearpage
 
 
 
